--- a/planet-together/package.json
+++ b/planet-together/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.1",
     "@types/three": "^0.163.0",
