--- a/planet-together/package.json
+++ b/planet-together/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.10",
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.1",
     "@types/three": "^0.163.0",
+    "framer-motion": "^11.0.28",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
