--- a/planet-together/tsconfig.json
+++ b/planet-together/tsconfig.json
@@ -22,6 +22,6 @@
       "images/*": ["./public/images/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/components/Explosion.jsx"],
   "exclude": ["node_modules"]
 }
